# motosan-sandbox

./: CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: Dockerfile.linux-dev
.github/workflows/: ci.yml
crates/motosan-sandbox/: Cargo.toml  README.md
crates/motosan-sandbox-proxy/: Cargo.toml
crates/motosan-sandbox-proxy/src/: connect.rs  lib.rs  matcher.rs
crates/motosan-sandbox-proxy/tests/: proxy_gate.rs
crates/motosan-sandbox/examples/: agent_with_sandbox.rs  financial_sandbox.rs  strategy.py
crates/motosan-sandbox/src/: denial.rs  error.rs  execpolicy.rs  helper.rs  lib.rs  linux.rs  linux_bridge.rs  linux_bwrap.rs  policy.rs  proxy_bridge.rs  reexec.rs  seatbelt.rs  seatbelt_base_policy.sbpl  spawn.rs  transform.rs  types.rs
crates/motosan-sandbox/tests/: bwrap_viability_probe.rs  linux_enforcement.rs  loop_integration.rs  proxy_enforcement.rs  run_passthrough.rs  seatbelt_enforcement.rs  seatbelt_proxy_probe.rs  transform_common.rs  transform_seatbelt.rs
docs/superpowers/plans/: 2026-05-25-motosan-sandbox-phase0.1-bounded-output.md  2026-05-25-motosan-sandbox-phase1-linux.md  2026-05-25-motosan-sandbox-phase2-proxy.md  2026-05-25-motosan-sandbox-phase3-netns-proxy.md  2026-05-26-execpolicy.md  2026-05-26-financial-sandbox-example.md  2026-05-26-seatbelt-python-ipc-holes.md  2026-05-26-secret-deny-read.md
docs/superpowers/specs/: 2026-05-25-motosan-sandbox-phase1-linux-design.md  2026-05-25-motosan-sandbox-phase2-proxy-design.md  2026-05-25-motosan-sandbox-phase3-netns-proxy-design.md  2026-05-26-execpolicy-design.md  2026-05-26-financial-sandbox-example-design.md  2026-05-26-secret-deny-read-design.md
