[package]
name = "motosan-sandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OS-level sandboxing for command execution (macOS Seatbelt; Linux in later phases)"
repository = "https://github.com/motosan-dev/motosan-sandbox"
keywords = ["sandbox", "seatbelt", "security", "process", "isolation"]
categories = ["os", "command-line-utilities"]

[[bin]]
name = "motosan-sandbox-helper"
path = "src/bin/motosan-sandbox-helper.rs"

[features]
default = []
# Optional capability — mirrors motosan-agent-loop's cancellation feature.
cancellation = ["dep:tokio-util"]
# Allowlist network proxy (Phase 2/3). Pulls in the leaf proxy crate; enables
# NetworkPolicy::Proxied enforcement on macOS (Seatbelt) and Linux
# (bwrap netns + transparent loopback bridge — Phase 3).
proxy = ["dep:motosan-sandbox-proxy", "dep:tempfile", "tokio/net"]

[dependencies]
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "process", "io-util", "time", "rt"] }
tokio-util = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
motosan-sandbox-proxy = { version = "0.1", path = "../motosan-sandbox-proxy", optional = true }
# Phase 3 host-side proxy bridge needs a per-run UDS temp dir (auto-removed
# on Drop, so the RAII guard tears the socket files down on every exit path).
tempfile = { version = "3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
seccompiler = "0.5.0"
libc = "0.2"
globset = "0.4"
walkdir = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
motosan-agent-loop = { path = "../../../motosan-agent-loop", features = ["testing"] }
motosan-agent-tool = { path = "../../../motosan-agent-tool" }
async-trait = "0.1"
serde_json = "1"
